--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 * {
   margin: 0;
   padding: 0;
@@ -7,4 +9,23 @@
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.main {
+  font-family: "Product sans", sans-serif;
+  background-color: $main-bg;
+  color: $main-color;
+}
+.container {
+  display: flex;
+  border-bottom: 2px solid $soft-bg;
+}
+.menuContainer {
+  width: 250px;
+  padding: 5px 20px;
+  border-right: 2px solid $soft-bg;
+}
+.contentContainer {
+  width: 100%;
+  padding: 5px 20px;
 }
