--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./responsive.scss";
 
 * {
   margin: 0;
@@ -12,20 +13,26 @@ a {
 }
 
 .main {
-  font-family: "Product sans", sans-serif;
+  font-family: "Inter", sans-serif;
   background-color: $main-bg;
   color: $main-color;
 }
+
 .container {
   display: flex;
-  border-bottom: 2px solid $soft-bg;
 }
+
 .menuContainer {
   width: 250px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
+
+  @include lg {
+    width: max-content;
+  }
 }
+
 .contentContainer {
-  width: 100%;
   padding: 5px 20px;
+  width: 100%;
 }
