--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,9 +1,11 @@
+@import "../../styles/responsive.scss";
 .navbar {
   width: 100%;
   padding: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   .logo {
     display: flex;
     align-items: center;
