--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,10 +1,22 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
 
 .home {
   display: grid;
   gap: 20px;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: minmax(180px, auto);
+  grid-auto-flow: dense;
+  @include xxl {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @include lg {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include md {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
   .box {
     border-radius: 10px;
     border: 2px solid $soft-bg;
@@ -22,5 +34,8 @@
   .box-7 {
     grid-column: span 2;
     grid-row: span 2;
+    @include md {
+      display: none;
+    }
   }
 }
