--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,7 @@ a {
 }
 
 .main {
-  font-family: "Inter", sans-serif;
+  font-family: "Product Sans", sans-serif;
   background-color: $main-bg;
   color: $main-color;
 }
